--- a/package.json
+++ b/package.json
@@ -10,8 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@firebase/app": "^0.11.0",
+    "@firebase/auth": "^1.9.0",
+    "@firebase/auth-compat": "^0.5.18",
+    "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-native-firebase/app": "^21.7.4",
+    "@react-native-firebase/auth": "^21.7.4",
+    "@react-native-google-signin/google-signin": "^13.1.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@supabase/supabase-js": "^2.48.1",
+    "firebase": "^11.3.0",
+    "openai": "^4.83.0",
     "react": "18.3.1",
-    "react-native": "0.77.0"
+    "react-native": "0.77.0",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.6.0",
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -30,6 +45,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
