--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,12 +7,16 @@ require Pod::Executable.execute_command('node', ['-p',
 
 platform :ios, min_ios_version_supported
 prepare_react_native_project!
-use_modular_headers!
-use_frameworks! :linkage => :static
+use_frameworks! :linkage => :static, :subprojects_inherit_frameworks => true
 $RNFirebaseAsStaticFramework = true
+ENV['RCT_NEW_ARCH_ENABLED'] = '0'
+
 
 target 'incurio' do
   config = use_native_modules!
+
+  # Explicitly add gesture handler
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
 
   use_react_native!(
     :path => config[:reactNativePath],
@@ -21,6 +25,13 @@ target 'incurio' do
   )
 
   post_install do |installer|
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['ENABLE_BITCODE'] = 'NO'
+        config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)', '_LIBCPP_ENABLE_CXX17_REMOVED_UNARY_BINARY_FUNCTION=1']
+      end
+    end
+    
     # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
     react_native_post_install(
       installer,
