--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "openai": "^4.83.0",
     "react": "18.3.1",
     "react-native": "0.77.0",
+    "react-native-gesture-handler": "^2.23.0",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.6.0",
     "react-native-url-polyfill": "^2.0.0"
