--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@firebase/auth": "^1.9.0",
     "@firebase/auth-compat": "^0.5.18",
     "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native-firebase/app": "^21.7.4",
     "@react-native-firebase/auth": "^21.7.4",
     "@react-native-google-signin/google-signin": "^13.1.0",
@@ -25,6 +26,7 @@
     "react": "18.3.1",
     "react-native": "0.77.0",
     "react-native-gesture-handler": "^2.23.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.6.0",
     "react-native-url-polyfill": "^2.0.0"
@@ -42,6 +44,7 @@
     "@react-native/typescript-config": "0.77.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^18.2.6",
+    "@types/react-native-push-notification": "^8.1.4",
     "@types/react-test-renderer": "^18.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
