Backgrounf task for spark generation

--- a/ios/incurio/Info.plist
+++ b/ios/incurio/Info.plist
@@ -74,5 +74,9 @@
 	<false/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+	</array>
 </dict>
 </plist>
