--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "openai": "^4.83.0",
     "react": "18.3.1",
     "react-native": "0.77.0",
+    "react-native-background-fetch": "^4.2.7",
     "react-native-gesture-handler": "^2.23.0",
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^5.2.0",
