--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native": "0.77.0",
     "react-native-background-fetch": "^4.2.7",
     "react-native-gesture-handler": "^2.23.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.6.0",
